--- a/ProjectTemplates/template.utopia.db4o.properties
+++ b/ProjectTemplates/template.utopia.db4o.properties
@@ -1,5 +1,15 @@
 <?xml version="1.0"?>
 <properties>
+
+	<property name="out.domainModelNamespace" value="Utopia.SearchIndex.DomainModel"/>
+	<property name="out.serviceModelNamespace" value="Utopia.SearchIndex.ServiceModel"/>
+	<property name="out.serviceNamespace" value="Utopia.SearchIndex"/>
+	<property name="out.serviceName" value="SearchIndex"/>
+	<property name="out.databaseName" value="SearchIndex"/>
+	<property name="out.modelName" value="Document"/>
+	<property name="deploy.dir" value="out\Utopia.SearchIndex"/>
+
+<!--
 	<property name="out.domainModelNamespace" value="Utopia.ProductCatalogue.DomainModel"/>
 	<property name="out.serviceModelNamespace" value="Utopia.ProductCatalogue.ServiceModel"/>
 	<property name="out.serviceNamespace" value="Utopia.ProductCatalogue"/>
@@ -8,7 +18,6 @@
 	<property name="out.modelName" value="Product"/>
 	<property name="deploy.dir" value="out\Utopia.ProductCatalogue.ServiceStack"/>
 
-<!--
 	<property name="out.domainModelNamespace" value="Utopia.CardBilling.DomainModel"/>
 	<property name="out.serviceModelNamespace" value="Utopia.CardBilling.ServiceModel"/>
 	<property name="out.serviceNamespace" value="Utopia.CardBilling"/>
