--- a/trunk/ProjectTemplates/template.utopia.db4o.properties
+++ b/trunk/ProjectTemplates/template.utopia.db4o.properties
@@ -1,6 +1,15 @@
 <?xml version="1.0"?>
 <properties>
 
+	<property name="out.domainModelNamespace" value="Utopia.OrderProcess.DomainModel"/>
+	<property name="out.serviceModelNamespace" value="Utopia.OrderProcess.ServiceModel"/>
+	<property name="out.serviceNamespace" value="Utopia.OrderProcess"/>
+	<property name="out.serviceName" value="OrderProcess"/>
+	<property name="out.databaseName" value="OrderProcess"/>
+	<property name="out.modelName" value="Order"/>
+	<property name="deploy.dir" value="out\Utopia.OrderProcess"/>
+
+<!--
 	<property name="out.domainModelNamespace" value="Utopia.SearchIndex.DomainModel"/>
 	<property name="out.serviceModelNamespace" value="Utopia.SearchIndex.ServiceModel"/>
 	<property name="out.serviceNamespace" value="Utopia.SearchIndex"/>
@@ -9,7 +18,6 @@
 	<property name="out.modelName" value="Document"/>
 	<property name="deploy.dir" value="out\Utopia.SearchIndex"/>
 
-<!--
 	<property name="out.domainModelNamespace" value="Utopia.ProductCatalogue.DomainModel"/>
 	<property name="out.serviceModelNamespace" value="Utopia.ProductCatalogue.ServiceModel"/>
 	<property name="out.serviceNamespace" value="Utopia.ProductCatalogue"/>
