--- a/Common/ServiceStack.Interfaces/ServiceStack.DataAccess/ServiceStack.DataAccess.csproj
+++ b/Common/ServiceStack.Interfaces/ServiceStack.DataAccess/ServiceStack.DataAccess.csproj
@@ -40,14 +40,18 @@
     <Compile Include="Criteria\IPagingCriteria.cs" />
     <Compile Include="Criteria\PagingCriteria.cs" />
     <Compile Include="DataAccessException.cs" />
+    <Compile Include="IAggregatable.cs" />
     <Compile Include="IPersistenceProvider.cs" />
     <Compile Include="IPersistenceProviderManager.cs" />
     <Compile Include="IPersistenceProviderManagerFactory.cs" />
+    <Compile Include="IQueryableByComparer.cs" />
+    <Compile Include="IQueryableByExample.cs" />
+    <Compile Include="IQueryableByPredicate.cs" />
     <Compile Include="IQueryablePersistenceProvider.cs" />
     <Compile Include="IResultSet.cs" />
     <Compile Include="ITransactionContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryableByExample.cs" />
+    <Compile Include="IQueryable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
