--- a/trunk/Common/ServiceStack.Common/ServiceStack.Translators.Generator/ServiceStack.Translators.Generator.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Translators.Generator/ServiceStack.Translators.Generator.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionTranslatorClassGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeDomUtils.cs" />
