--- a/Common/ServiceStack.Common/ServiceStack.Translators.Generator/ServiceStack.Translators.Generator.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Translators.Generator/ServiceStack.Translators.Generator.csproj
@@ -57,7 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filters\CSharpCodeFilter.cs" />
+    <Compile Include="Filters\CodeFilter.cs" />
     <Compile Include="ExtensionTranslatorClassGenerator.cs" />
+    <Compile Include="Filters\ICodeFilter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeDomUtils.cs" />
