--- a/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel/ServiceStack.ServiceModel.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel/ServiceStack.ServiceModel.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Serialization\JsonDataContractSerializer.cs" />
     <Compile Include="Serialization\KeyValueDataContractDeserializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceModelFinderBase.cs" />
+    <Compile Include="DeprecatedServiceModelFinderBase.cs" />
     <Compile Include="Support\XmlSerializableWrapper.cs" />
     <Compile Include="Serialization\XmlSerializableDeserializer.cs" />
     <Compile Include="Serialization\XmlSerializableSerializer.cs" />
