--- a/trunk/Common/ServiceStack.Interfaces/ServiceStack.Translators/ServiceStack.Translators.csproj
+++ b/trunk/Common/ServiceStack.Interfaces/ServiceStack.Translators/ServiceStack.Translators.csproj
@@ -45,9 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TranslateModelExtensionAttribute.cs" />
+    <Compile Include="TranslateExtensionAttribute.cs" />
     <Compile Include="TranslateMemberAttribute.cs" />
-    <Compile Include="TranslateModelAttribute.cs" />
+    <Compile Include="TranslateAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
