--- a/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\DictionaryExtensions.cs" />
+    <Compile Include="Extensions\DisposableExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Extensions\ITranslatorExtensions.cs" />
