--- a/trunk/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
