added XmlSyncReplyHttpListener.cs for hosting services stack inside a windows service.

--- a/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
@@ -59,8 +59,10 @@
     <Compile Include="EndpointHostBase.cs" />
     <Compile Include="EndpointType.cs" />
     <Compile Include="MetadataConfig.cs" />
+    <Compile Include="XmlSyncReplyHttpListener.cs" />
     <Compile Include="ServiceEndpointsMetadataConfig.cs" />
     <Compile Include="Metadata\Soap12WsdlMetadataHandler.cs" />
+    <Compile Include="HttpListenerBase.cs" />
     <Compile Include="SoapMetadataConfig.cs" />
     <Compile Include="Support\HttpHandlerBase.cs" />
     <Compile Include="Support\Metadata\WsdlMetadataHandlerBase.cs" />
